# dora_api/src/controllers/user.controller.ts
@@ -3,6 +3,16 @@ import * as service from "../services/user.service.ts";
 import message from "../common/message/message.common.ts";
 import { responseAPISucess } from "../common/message/response.common.ts";
 import { validationResult } from "express-validator";
+import ExcelJS from "exceljs";
+
+import { fileURLToPath } from "url";
+import path from "path";
+import { name_baocao, font_style_head, alignment_style_head, timer, border } from "../common/static/excel.static.ts";
+import { source_template } from "../common/static/tool.static.ts";
+
+const __filename = fileURLToPath(import.meta.url);
+const __dirname = path.dirname(__filename);
+const __dirsource = path.join(__dirname, "..");
 
 export const findAll = async (req: Request, res: Response) => {
   let result = await service.findAll();
@@ -41,4 +51,61 @@ export const create = async (req: Request, res: Response) => {
   }
 
   return res.status(200).json({ errors: response.array() });
-}
+};
+
+export const export_template = async (req: Request, res: Response) => {
+  var workbook = new ExcelJS.Workbook();
+  var {tuNgay, denNgay} = req.body;
+  
+  let result: any = await service.findAll();
+
+  await workbook.xlsx.readFile(source_template("Template_User"))
+  
+  workbook.eachSheet(function(worksheet, sheetId) {
+    let TT = 1;
+    let col_start = 1;
+    let col_end = 7
+    let row_start = 6 ;
+    let code = 4;
+    let k = 0;
+    let row = worksheet.getRow(row_start + k)
+    let row_code = worksheet.getRow(code)
+    
+    // ve excel
+    worksheet.getCell("A1").value = "BÁO CÁO SỐ LIỆU NGƯỜI DÙNG";
+    worksheet.mergeCells("A1:G1")
+    worksheet.getCell("A1").font = font_style_head
+    worksheet.getCell("A1").alignment = alignment_style_head
+  
+    worksheet.getCell("A2").value = timer(tuNgay, denNgay)
+    worksheet.mergeCells("A2:G2")
+    worksheet.getCell("A2").alignment = alignment_style_head
+
+    // fill data
+    if(result && result.length){
+      for (var i = col_start; i <= col_end; i++){
+        if(i == 1){
+          row.getCell(i).value = TT
+        }else{
+          let code_text:any = row_code.getCell(i).value
+          row.getCell(i).value = (result[k])[code_text]
+        }
+        row.getCell(i).border = border
+        if(i == col_end){
+          k++
+          TT++
+        }
+      }
+    }   
+
+    // an cot code
+    row_code.hidden = true
+  });
+
+
+  res.setHeader("Content-Type", name_baocao.baoCaoSoLieuNguoiDung);
+  res.setHeader("Content-Disposition", "attachment; filename=" + name_baocao.baoCaoSoLieuNguoiDung);
+  workbook.xlsx.write(res).then(function (data) {
+    res.end();
+  });
+};
